--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,14 @@
     <servlet-name>ssm</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-
+  
+  <!-- logback -->
+  <context-param>
+    <param-name>logbackConfigLocation</param-name>
+    <param-value>classpath:log/logback.xml</param-value>
+  </context-param>
+  <listener>
+    <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+  </listener>
 
 </web-app>
