--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,23 @@
             <version>RELEASE</version>
         </dependency>
         <!--=========================================-->
+        <!--Shiro 整合-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-quartz</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <!--===========================================-->
 
 
     </dependencies>
